03-canary-deployment/01-webapp-V1/01-webapp.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp-v1
  namespace: webapp
  labels:
    app: webapp-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-v1
  template:
    metadata:
      labels:
        app: webapp-v1
    spec:
      containers:
        - name: webapp-v1
          image: jakubhajek/app1-node:v1
          ports:
            - name: web
              containerPort: 3000
          resources:
            limits:
              cpu: 300m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 50Mi

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-v1
  namespace: webapp
  labels:
    app: webapp-v1
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: webapp-v1
